--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django-phonenumber-field[phonenumbers]==5.0.0
 django-filter==2.4.0
 django-bootstrap-form
 unicodecsv==0.14.1
-##for deployment in Heroku
+## for deployment in Heroku ##
 #django-heroku==0.3.1
 #whitenoise==5.2.0
 #dj-database-url==0.5.0
