--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ django-filter==2.4.0
 django-bootstrap-form
 unicodecsv==0.14.1
 ## for deployment in Heroku ##
-django-heroku==0.3.1
-whitenoise==5.2.0
-dj-database-url==0.5.0
-psycopg2==2.8.6
-python-decouple==3.4
-pytz==2017.3
+#django-heroku==0.3.1
+#whitenoise==5.2.0
+#dj-database-url==0.5.0
+#psycopg2==2.8.6
+#python-decouple==3.4
+#pytz==2017.3
